...
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_error_password_message">Passwords do not match!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="login_button_label">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
...
